--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/book-solid.ico" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9033490466357876"
+     crossorigin="anonymous"></script>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://stackedit.io/style.css">
     <script src="https://kit.fontawesome.com/b53972c862.js" crossorigin="anonymous"></script>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="TYMaterials, tymaterials"
+      content="Web site created using for thid year notes, question banks, previous year papers, etc for GHRCEM Pune students."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="google-adsense-account" content="ca-pub-9033490466357876">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B5944EDZSE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B5944EDZSE');
+</script>
+  
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -42,4 +56,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9033490466357876"
+     crossorigin="anonymous">
+  </script>
 </html>
